--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,19 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<minecraft.version>1.8.9</minecraft.version>
+		<mcp.version>1.8.9</mcp.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>minecraft</id>
+			<url>https://libraries.minecraft.net/</url>
+		</repository>
+		<repository>
+			<id>forge</id>
+			<url>https://maven.minecraftforge.net/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,6 +76,8 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
